# grss

./: CMakeLists.txt
src/: main.cpp  mainwindow.hpp  slot.cpp  slot.hpp
